ZIG-390: Fix chart height on mobile.

--- a/src/components/Providers/ProvidersProfitsChart/ProvidersProfitsChart.scss
+++ b/src/components/Providers/ProvidersProfitsChart/ProvidersProfitsChart.scss
@@ -21,7 +21,7 @@
   }
 
   .barChart {
-    // height: 260px;
+    height: 260px;
     padding: 0 24px 16px;
   }
 }
